kotlin-ide/idea/testData/compiler/asJava/lightClasses/compilationErrors/TopLevelDestructuring.java
public final class TopLevelDestructuringKt {
    private static final int z;

    public static final int getZ() { /* compiled code */ }
}
